--- a/style.css
+++ b/style.css
@@ -36,9 +36,13 @@ input[type="color"] {
 
 button {
   width: 13rem;
-  height: 3rem;
+  height: 4rem;
   float: right;
   margin-bottom: 0;
+}
+
+button:hover {
+  cursor: pointer;
 }
 #color-container,
 #color-container-hex {
