--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ button:hover {
   width: 20%;
   height: 50rem;
   background-color: aqua;
-  display: flex;
 }
 
 #color-container-hex > * {
@@ -63,4 +62,16 @@ button:hover {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+/* Pour les petits écrans */
+@media only screen and (max-width: 768px) {
+  form#color-form {
+    padding: 1rem;
+    height: 15rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
